<resources>
    <string name="app_name">GER-ES Vocable Trainer</string>
    <string name="startButton_text">Start Game</string>
    <string name="addWordButton_text">Add Word</string>
    <string name="viewWordsButton_text">View Words</string>
    <string name="resetDatabaseButton_text">Reset Database</string>
    <string name="dataBaseReset_text">Database has been reset.</string>
    <string name="gerTextField_text">German Translation</string>
    <string name="esTextField_text">Spanish Translation</string>
    <string name="info_text">Addition Info</string>
    <string name="translationAddedSuccess_message">The translation has been added.</string>
    <string name="translationAddedFail_message">This translation already exists!</string>
    <string name="translationAddedIllegalSymbol_message">Your info text contains a illegal symbol!</string>
    <string name="answerTextField_text">Type your answer here</string>
    <string name="defaultTextView_text">Word</string>
    <string name="confirmAnswerButton_text">Confirm Answer</string>
    <string name="wordCorrectSnackBar_text">Your answer was correct!</string>
    <string name="wordFalseSnackBar_text">Wrong answer! The correct word is </string>
    <string name="gameStatus_text">You answered %1$.2f \%% correctly</string>
    <string name="playAgainButton_text">Play again</string>
    <string name="goToTitleButton_text">Go back to menu</string>
    <string name="gerTitleTextView_text">German</string>
    <string name="esTitleTextView_text">Spanish</string>
    <string name="infoTitleTextView_text">Info</string>
    <string name="updateButton_text">Update</string>
    <string name="translationUpdatedSuccess_message">The Translation has been updated successfully!</string>
    <string name="addTranslationMenu_text">Add Translation</string>
    <string name="viewTranslationsMenu_text">View Translations</string>
    <string name="resetDBMenu_text">Reset database</string>
    <string name="aboutMenu_text">About</string>
    <string name="aboutTitle_text">About</string>
    <string name="appVersion_text">Version 1.2.0</string>
    <string name="appLicense_text">This app is licensed under tho GNU General Public License v3.0</string>
    <string name="about_text">This App is a simple way of learning vocables. It is meant to be used for either spanish or german speaking people.</string>
    <string name="author_Text">App is written by Phil Trommer</string>
</resources>
