<?xml version="1.0" encoding="utf-8"?>



<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="editFragmentViewModel"
            type="com.example.geres_trainer.screens.edit.EditFragmentViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/gerTextField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:textAlignment="center"
            android:inputType="textAutoCorrect|text"
            android:hint="@string/gerTextField_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:translationGermanString="@{editFragmentViewModel.translation}"/>

        <EditText
            android:id="@+id/esTextField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:textAlignment="center"
            android:inputType="textAutoCorrect|text"
            android:hint="@string/esTextField_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gerTextField"
            app:translationSpanishString="@{editFragmentViewModel.translation}"/>

        <EditText
            android:id="@+id/infoTextField"
            android:layout_width="319dp"
            android:layout_height="150dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/info_text"
            android:inputType="textAutoCorrect|text"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/esTextField"
            app:translationInfoString="@{editFragmentViewModel.translation}" />

        <Button
            android:id="@+id/updateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/updateButton_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/infoTextField" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>


